--- a/src/App.css
+++ b/src/App.css
@@ -472,7 +472,7 @@ button:hover {
   width: 100%;
 }
 
-.nickname {
+.nickname, .send-message {
   font-size: 20px;
   font-weight: 600;
   opacity: 0.8;
@@ -484,13 +484,13 @@ button:hover {
   text-align: right;
 }
 
+.nickname:hover, .send-message:hover {
+  opacity: 1;
+}
+
 .online-indicator {
   margin-left: 8px;
   color: #2ecc71;
-}
-
-.nickname:hover {
-  opacity: 1;
 }
 
 .nickname-form {
@@ -562,4 +562,71 @@ button {
   font-size: 18px;
   margin: 8px 0;
   text-align: left;
+}
+
+.actions {
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+  align-items: flex-end;
+}
+
+.main-layout {
+  display: flex;
+  gap: 20px;
+  width: 100%;
+  max-width: 1500px;
+}
+
+.chat-box {
+  width: 600px;
+  border: 1px solid currentColor;
+  display: flex;
+  flex-direction: column;
+  height: 600px;
+}
+
+.chat-header {
+  padding: 15px;
+  border-bottom: 1px solid currentColor;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 16px;
+  word-break: break-all;
+}
+
+.chat-header > div {
+  margin-right: 20px;
+  flex: 1;
+}
+
+.chat-messages {
+  flex: 1;
+  overflow-y: auto;
+  padding: 15px;
+}
+
+.chat-input {
+  border-top: 1px solid currentColor;
+  padding: 15px;
+  display: flex;
+  gap: 10px;
+}
+
+.chat-input input {
+  flex: 1;
+  padding: 8px;
+  background: transparent;
+  border: 1px solid currentColor;
+  color: inherit;
+  font-family: inherit;
+  font-size: 16px;
+}
+
+.chat-header button {
+  padding: 4px 8px;
+  margin: 0;
+  min-width: unset;
+  font-size: 20px;
 } 
